--- a/index.html
+++ b/index.html
@@ -770,6 +770,140 @@
       text-decoration: none;
     }
 
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      flex-wrap: wrap;
+      margin-top: 12px;
+    }
+
+    .footer-links a {
+      color: var(--accent-light);
+      font-size: 0.88rem;
+      text-decoration: underline;
+      text-underline-offset: 3px;
+    }
+
+    .legal-section {
+      padding: 56px 0;
+      border-top: 1px solid var(--border);
+      background: rgba(255,255,255,0.015);
+    }
+
+    .legal-content {
+      max-width: 820px;
+      margin: 0 auto;
+      border: 1px solid var(--border);
+      border-radius: var(--radius-sm);
+      background: var(--bg-card);
+      padding: 24px;
+    }
+
+    .legal-content h2 {
+      font-family: var(--font-serif);
+      font-size: 1.6rem;
+      margin-bottom: 10px;
+    }
+
+    .legal-content p,
+    .legal-content li {
+      color: var(--text-muted);
+      font-size: 0.95rem;
+    }
+
+    .legal-content ul {
+      padding-inline-start: 20px;
+      margin-top: 10px;
+      display: grid;
+      gap: 8px;
+    }
+
+    .accessibility-widget {
+      position: fixed;
+      left: 20px;
+      bottom: 24px;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+    }
+
+    .accessibility-toggle {
+      border: 1px solid rgba(126,224,161,0.55);
+      background: linear-gradient(135deg, var(--accent), var(--accent-light));
+      color: var(--bg-primary);
+      border-radius: 999px;
+      padding: 12px 16px;
+      font-weight: 800;
+      cursor: pointer;
+    }
+
+    .accessibility-panel {
+      display: none;
+      width: min(290px, calc(100vw - 40px));
+      border: 1px solid var(--border);
+      border-radius: var(--radius-sm);
+      background: rgba(10,18,16,0.96);
+      box-shadow: var(--shadow-medium);
+      padding: 14px;
+    }
+
+    .accessibility-panel.open { display: block; }
+
+    .accessibility-panel h2 {
+      font-size: 1rem;
+      margin-bottom: 10px;
+    }
+
+    .accessibility-actions {
+      display: grid;
+      gap: 8px;
+    }
+
+    .accessibility-actions button {
+      width: 100%;
+      text-align: right;
+      background: var(--bg-card);
+      color: var(--text);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 10px 12px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    body.accessibility-high-contrast {
+      --bg-primary: #000;
+      --bg-secondary: #000;
+      --bg-card: #0f0f0f;
+      --bg-card-hover: #1a1a1a;
+      --text: #fff;
+      --text-muted: rgba(255,255,255,0.9);
+      --text-dim: rgba(255,255,255,0.8);
+      --accent: #ffe066;
+      --accent-light: #fff1a8;
+      --accent-dark: #f8d43f;
+    }
+
+    body.accessibility-underline-links a {
+      text-decoration: underline !important;
+      text-underline-offset: 4px;
+    }
+
+    body.accessibility-readable-font {
+      --font-sans: Arial, 'Noto Sans Hebrew', sans-serif;
+      --font-serif: Arial, 'Noto Sans Hebrew', sans-serif;
+    }
+
+    @media (max-width: 768px) {
+      .accessibility-widget {
+        bottom: 88px;
+        left: 12px;
+      }
+    }
+
     /* Mobile Sticky CTA */
     .mobile-cta {
       position: fixed;
@@ -1138,9 +1272,41 @@
         © <span id="year"></span> כל הזכויות שמורות · רוטשילד 129, תל-אביב · 
         <a href="tel:0546614373">054-6614373</a>
       </p>
-      <p class="footer-text" style="margin-top: 8px; opacity: 0.7;">© 2026 Lior_Ai כל הזכויות שמורות</p>
+      <div class="footer-links">
+        <a href="#privacy">הצהרת פרטיות</a>
+        <a href="#accessibility-statement">הצהרת נגישות</a>
+      </div>
+      <p class="footer-text" style="margin-top: 8px; opacity: 0.9;">בניית הדף: <a href="https://www.lior-ai.com" target="_blank" rel="noopener">WWW.LIOR-AI.COM</a></p>
     </div>
   </footer>
+
+  <section class="legal-section" id="privacy" aria-labelledby="privacy-title">
+    <div class="container">
+      <div class="legal-content">
+        <h2 id="privacy-title">הצהרת פרטיות</h2>
+        <p>האתר נועד לספק מידע כללי וליצור קשר טלפוני עם הקליניקה. בשלב זה לא מתבצעת הרשמה לחשבון, ולא נאסף מידע רפואי אישי דרך טפסים באתר.</p>
+        <ul>
+          <li>ייתכן איסוף נתונים טכניים בסיסיים ע״י ספקי אחסון ואבטחה לצרכי תפעול והגנה על האתר.</li>
+          <li>מספר הטלפון מוצג לצורך יצירת קשר יזומה מצד המשתמש בלבד.</li>
+          <li>לשאלות בנושא פרטיות ניתן לפנות בטלפון: <a href="tel:0546614373">054-6614373</a>.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="legal-section" id="accessibility-statement" aria-labelledby="accessibility-title">
+    <div class="container">
+      <div class="legal-content">
+        <h2 id="accessibility-title">הצהרת נגישות</h2>
+        <p>אנחנו פועלים להנגשת האתר עבור כלל האוכלוסייה ושואפים לעמוד בהנחיות הנגישות המקובלות בישראל (תקן ישראלי 5568 המבוסס על WCAG 2.1 ברמה AA).</p>
+        <ul>
+          <li>באתר נוסף כפתור נגישות המאפשר הגדלת טקסט, ניגודיות גבוהה, קו תחתי לקישורים ופונט קריא.</li>
+          <li>האתר מותאם לשימוש במקלדת ולקריאה במסכים נפוצים ובמכשירים ניידים.</li>
+          <li>אם נתקלתם בבעיה, נשמח לקבל פנייה ולשפר: <a href="tel:0546614373">054-6614373</a>.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
   <!-- Mobile Sticky CTA -->
   <div class="mobile-cta" aria-label="קריאה לפעולה">
@@ -1152,6 +1318,21 @@
       <span class="btn-icon">📍</span>
       מיקום
     </a>
+  </div>
+
+  <div class="accessibility-widget" aria-label="כלי נגישות">
+    <button class="accessibility-toggle" type="button" aria-expanded="false" aria-controls="accessibility-panel">נגישות</button>
+    <section class="accessibility-panel" id="accessibility-panel" aria-label="תפריט נגישות">
+      <h2>התאמות נגישות</h2>
+      <div class="accessibility-actions">
+        <button type="button" data-action="font-plus">הגדלת טקסט</button>
+        <button type="button" data-action="font-minus">הקטנת טקסט</button>
+        <button type="button" data-action="high-contrast">ניגודיות גבוהה</button>
+        <button type="button" data-action="underline-links">קו תחתי לקישורים</button>
+        <button type="button" data-action="readable-font">פונט קריא</button>
+        <button type="button" data-action="reset">איפוס</button>
+      </div>
+    </section>
   </div>
 
   <script>
@@ -1176,6 +1357,57 @@
       } else {
         header.style.background = 'rgba(10,18,16,0.85)';
       }
+    });
+
+    const accessibilityToggle = document.querySelector('.accessibility-toggle');
+    const accessibilityPanel = document.getElementById('accessibility-panel');
+    const accessibilityButtons = document.querySelectorAll('[data-action]');
+    let currentScale = 1;
+
+    accessibilityToggle.addEventListener('click', () => {
+      const isOpen = accessibilityPanel.classList.toggle('open');
+      accessibilityToggle.setAttribute('aria-expanded', String(isOpen));
+    });
+
+    const setFontScale = () => {
+      document.documentElement.style.fontSize = `${(currentScale * 100).toFixed(0)}%`;
+    };
+
+    const resetAccessibility = () => {
+      document.body.classList.remove('accessibility-high-contrast', 'accessibility-underline-links', 'accessibility-readable-font');
+      currentScale = 1;
+      setFontScale();
+    };
+
+    accessibilityButtons.forEach((button) => {
+      button.addEventListener('click', () => {
+        const action = button.dataset.action;
+        if (action === 'font-plus') {
+          currentScale = Math.min(1.3, currentScale + 0.1);
+          setFontScale();
+          return;
+        }
+        if (action === 'font-minus') {
+          currentScale = Math.max(0.9, currentScale - 0.1);
+          setFontScale();
+          return;
+        }
+        if (action === 'high-contrast') {
+          document.body.classList.toggle('accessibility-high-contrast');
+          return;
+        }
+        if (action === 'underline-links') {
+          document.body.classList.toggle('accessibility-underline-links');
+          return;
+        }
+        if (action === 'readable-font') {
+          document.body.classList.toggle('accessibility-readable-font');
+          return;
+        }
+        if (action === 'reset') {
+          resetAccessibility();
+        }
+      });
     });
   </script>
 </body>
