--- a/index.html
+++ b/index.html
@@ -1325,8 +1325,14 @@
         <a href="#privacy">הצהרת פרטיות</a>
         <a href="#accessibility-statement">הצהרת נגישות</a>
       </div>
-      <p class="footer-text" style="margin-top: 8px; opacity: 0.9;">בניית הדף: <a href="https://www.lior-ai.com" target="_blank" rel="noopener">WWW.LIOR-AI.COM</a></p>
-    </div>
+   <a href="https://www.lior-ai.com"
+   target="_blank"
+   rel="noopener"
+   class="footer-text"
+   style="margin-top: 8px; opacity: 0.9; display: inline-block;">
+  נבנה ע"י lior-ai
+</a>
+
   </footer>
 
   <!-- Privacy -->
